--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -15,14 +15,19 @@ jobs:
       - name: Checkout repository code
         uses: actions/checkout@v2
       - name: Build an image from Dockerfile
-        run: docker build -t docker.io/epitech/sample-app:${{ github.sha }} .
-      - name: Run Trivy vulnerability scanner
+        run: docker build -t docker.io/epitech/t-nsa-800:${{ github.sha }} .
+      - name: Run Trivy vulnerability scanner on image with table terminal output
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'docker.io/epitech/sample-app:${{ github.sha }}'
+          image-ref: 'docker.io/epitech/t-nsa-800:${{ github.sha }}'
+      - name: Run Trivy vulnerability scanner on root filesystem with sarif file output
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          scan-ref: '.'
           format: 'sarif'
           output: 'scan.sarif'
-      - name: Upload scan results to GitHub Security tab
+      - name: Upload sarif output to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: 'scan.sarif'
